fixing buttons on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ body {
   font-family: "ConcertOne";
   font-size: 20px;
   text-align: center;
+  border-radius: 0;
 }
 
 .reset-button {
@@ -41,6 +42,7 @@ body {
   font-family: "ConcertOne";
   font-size: 15px;
   background-color: grey;
+  margin: 0;
 }
 
 .reset-button:hover, .items:hover, .refresh-button:hover {
